--- a/SystemUtil/SystemUtil.csproj
+++ b/SystemUtil/SystemUtil.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivityLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLogger.cs" />
   </ItemGroup>
